--- a/SerilogDemoApp/SerilogDemo/appsettings.json
+++ b/SerilogDemoApp/SerilogDemo/appsettings.json
@@ -6,5 +6,19 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Serilog": {
+    "Using": [],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithProcessId", "WithThreadId" ],
+    "WriteTo": [
+      {"Name" : "Console"}
+    ]
+  },
   "AllowedHosts": "*"
 }
